...
            )
            .clickable {
                onClick(value.title)

            }
            .semantics {
                contentDescription = "testItemType"
            },
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            modifier = Modifier
                .padding(
...
